--- a/FFT.ipynb
+++ b/FFT.ipynb
@@ -504,7 +504,6 @@
         "import numpy as np\n",
         "from numpy.fft import fft, ifft\n",
         "\n",
-        "# Examine a small number of points to see what happens more easily\n",
         "N=64 # the fft algorithm is fastest for N a power of 2\n",
         "tau = 10.0 # time length\n",
         "t = np.linspace(0, tau, N, endpoint=False) # creates N points to cover tau seconds\n",
@@ -642,10 +641,12 @@
         "N = 64 # the fft algorithm is fastest for N a power of 2\n",
         "tau = 10.0 # time length\n",
         "t = np.linspace(0, tau, N, endpoint=False) # creates N points to cover tau seconds\n",
+        "# Choose endpoint False so that signal would fit exactly periodically within tau\n",
         "f = 0.2 # frequency in Hz\n",
         "x = np.cos(2*np.pi*f*t) # create x array, amplitude 1.0\n",
         "\n",
-        "Fs = N/tau\n",
+        "Fs = N/tau # define sampling rate to be used in Spectrum1\n",
+        "\n",
         "# unpack the returned tuple into frequency and amplitude arrays\n",
         "plot_frq, plot_amplitudes = Spectrum1(x, Fs)\n",
         "\n",
@@ -656,7 +657,7 @@
         "plt.ylabel('Amplitude $\\mid X(N)\\mid$')\n",
         "plt.grid()\n",
         "\n",
-        "# explanation for why amplitude is 0.5\n"
+        "# amplitude is 0.5 beacuse its the sum of 2 complex exponentials divided by 2. The amplitude of the sum of them is 1 therefore, the factor of a half makes it 0.5\n"
       ]
     },
     {
